--- a/SocialWebsite/index.html
+++ b/SocialWebsite/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>nokoSocial</title>
+        <title>terraSocial</title>
         <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
         <meta name="description" content="andrvss Social Media">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="logo">
                     <h2 class="log">
-                        nokoSocial
+                        terraSocial
                     </h2>
                 </div>
                 <div class="search-bar">
@@ -163,31 +163,31 @@
                         </div>
                         <div class="story">
                             <div class="profile-photo">
-                                <img src="./assets/profile_img-44x44/profile2-44x44.jpg">
+                                <img src="./assets/profile_img-44x44/profile2-44x44.jpg" alt="">
                             </div>
                             <p class="name">Brad Pitt</p>
                         </div>
                         <div class="story">
                             <div class="profile-photo">
-                                <img src="./assets/profile_img-44x44/profile3-44x44.jpg">
+                                <img src="./assets/profile_img-44x44/profile3-44x44.jpg" alt="">
                             </div>
                             <p class="name">Anitta</p>
                         </div>
                         <div class="story">
                             <div class="profile-photo">
-                                <img src="./assets/profile_img-44x44/profile6-44x44.jpg">
+                                <img src="./assets/profile_img-44x44/profile6-44x44.jpg" alt="">
                             </div>
                             <p class="name">Matthew McConaug...</p>
                         </div>
                         <div class="story">
                             <div class="profile-photo">
-                                <img src="./assets/profile_img-44x44/profile4-44x44.webp">
+                                <img src="./assets/profile_img-44x44/profile4-44x44.webp" alt="">
                             </div>
                             <p class="name">Margot Robbie</p>
                         </div>
                         <div class="story">
                             <div class="profile-photo">
-                                <img src="./assets/profile_img-44x44/profile7-44x44.jpg">
+                                <img src="./assets/profile_img-44x44/profile7-44x44.jpg" alt="">
                             </div>
                             <p class="name">Viola Davis</p>
                         </div>
@@ -196,7 +196,7 @@
                     <!-- The Create Post Section-->
                     <form class="create-post">
                         <div class="profile-photo">
-                            <img src="assets/profile_img-88x88/profile1-88x88.webp">
+                            <img src="assets/profile_img-88x88/profile1-88x88.webp" alt="">
                         </div>
                         <input type="text" placeholder="What's on your mind?" id="create-post">
                         <input type="submit" value="Post" class="btn btn-primary">
@@ -209,7 +209,7 @@
                             <div class="head">
                                 <div class="user">
                                     <div class="profile-photo">
-                                        <img src="./assets/profile_img-88x88/profile5-88x88.jpg">
+                                        <img src="./assets/profile_img-88x88/profile5-88x88.jpg" alt="">
                                     </div>
                                     <div class="ingo">
                                         <h3>Netflix</h3>
@@ -221,7 +221,7 @@
                                 </span>
                             </div>
                             <div class="photo">
-                                <img src="./assets/feed/IMG_20220901_024323.webp">
+                                <img src="./assets/feed/IMG_20220901_024323.webp" alt="">
                             </div>
                             <div class="action-buttons">
                                 <div class="interaction-buttons">
@@ -234,9 +234,9 @@
                                 </div>
                             </div>
                             <div class="liked-by">
-                                <span><img src="./assets/profile_img-44x44/profile3-44x44.jpg" ></span>
-                                <span><img src="./assets/profile_img-44x44/profile6-44x44.jpg" ></span>
-                                <span><img src="./assets/profile_img-44x44/profile2-44x44.jpg" ></span>
+                                <span><img src="./assets/profile_img-44x44/profile3-44x44.jpg" alt=""></span>
+                                <span><img src="./assets/profile_img-44x44/profile6-44x44.jpg" alt=""></span>
+                                <span><img src="./assets/profile_img-44x44/profile2-44x44.jpg" alt=""></span>
                                 <p>Liked by <b>Jamie Fox</b> and <b>7,231 others</b></p>
                             </div>
 
@@ -250,7 +250,7 @@
                             <div class="head">
                                 <div class="user">
                                     <div class="profile-photo">
-                                        <img src="./assets/profile_img-88x88/profile2-88x88.jpg">
+                                        <img src="./assets/profile_img-88x88/profile2-88x88.jpg" alt="">
                                     </div>
                                     <div class="ingo">
                                         <h3>Golden Globe Awards</h3>
@@ -262,7 +262,7 @@
                                 </span>
                             </div>
                             <div class="photo">
-                                <img src="./assets/feed/Feed-1.jpg">
+                                <img src="./assets/feed/Feed-1.jpg" alt="">
                             </div>
                             <div class="action-buttons">
                                 <div class="interaction-buttons">
@@ -275,9 +275,9 @@
                                 </div>
                             </div>
                             <div class="liked-by">
-                                <span><img src="./assets/profile_img-44x44/profile7-44x44.jpg" ></span>
-                                <span><img src="./assets/profile_img-44x44/profile6-44x44.jpg" ></span>
-                                <span><img src="./assets/profile_img-44x44/profile4-44x44.jpg" ></span>
+                                <span><img src="./assets/profile_img-44x44/profile7-44x44.jpg" alt=""></span>
+                                <span><img src="./assets/profile_img-44x44/profile6-44x44.jpg" alt=""></span>
+                                <span><img src="./assets/profile_img-44x44/profile4-44x44.jpg" alt=""></span>
                                 <p>Liked by <b>Anya Taylor-Joy</b> and <b>5,317 others</b></p>
                             </div>
 
@@ -291,7 +291,7 @@
                             <div class="head">
                                 <div class="user">
                                     <div class="profile-photo">
-                                        <img src="./assets/profile_img-88x88/Profile4-88x-88.jpg">
+                                        <img src="./assets/profile_img-88x88/Profile4-88x-88.jpg" alt="">
                                     </div>
                                     <div class="ingo">
                                         <h3>HBO MAX</h3>
@@ -303,7 +303,7 @@
                                 </span>
                             </div>
                             <div class="photo">
-                                <img src="./assets/feed/Feed-2.jpg">
+                                <img src="./assets/feed/Feed-2.jpg" alt="">
                             </div>
                             <div class="action-buttons">
                                 <div class="interaction-buttons">
@@ -316,9 +316,9 @@
                                 </div>
                             </div>
                             <div class="liked-by">
-                                <span><img src="./assets/profile_img-44x44/profile1-44x44.jpg" ></span>
-                                <span><img src="./assets/profile_img-44x44/profile3-44x44.jpg" ></span>
-                                <span><img src="./assets/profile_img-44x44/profile5-44x44.jpg" ></span>
+                                <span><img src="./assets/profile_img-44x44/profile1-44x44.jpg" alt=""></span>
+                                <span><img src="./assets/profile_img-44x44/profile3-44x44.jpg" alt=""></span>
+                                <span><img src="./assets/profile_img-44x44/profile5-44x44.jpg" alt=""></span>
                                 <p>Liked by <b>Pedro Pascal</b> and <b>6,541 others</b></p>
                             </div>
 
@@ -332,7 +332,7 @@
                             <div class="head">
                                 <div class="user">
                                     <div class="profile-photo">
-                                        <img src="./assets/profile_img-44x44/profile2-44x44.jpg">
+                                        <img src="./assets/profile_img-44x44/profile2-44x44.jpg" alt="">
                                     </div>
                                     <div class="ingo">
                                         <h3>Brad Pitt</h3>
@@ -344,7 +344,7 @@
                                 </span>
                             </div>
                             <div class="photo">
-                                <img src="./assets/feed/Feed-3.jpg">
+                                <img src="./assets/feed/Feed-3.jpg" alt="">
                             </div>
                             <div class="action-buttons">
                                 <div class="interaction-buttons">
